<resources>
    <string name="app_name">PopMovies</string>
    <string name="mi_most_popular">Most popular</string>
    <string name="mi_top_rated">Top rated</string>
    <string name="mi_favourites">Favourites</string>
    <string name="mi_settings">Settings</string>
    <string name="intent_x_imageuri">imageuri</string>
    <string name="intent_x_jsonobject">jsonobject</string>
    <string name="loading_error">LOADING ERROR. Please check connections and API KEY.</string>
    <string name="rating_title_default">Rating</string>
    <string name="not_available">N/A</string>
    <string name="synopsis_title_default">Synopsis</string>
    <string name="overview_text_default">Lorem ipsum ad hoc. Alea iacta est. Honni soit qui mal y pense. Vivus lapsus morituruim area.</string>
    <string name="auth_key_error">Authentication error. Please check your API key.</string>
    <string name="release_date_title">Date</string>
    <string name="main_title_top_rated">PopMovies - Top Rated</string>
    <string name="main_title_most_popular">PopMovies - Most Popular</string>
    <string name="not_rated">Not rated</string>
    <string name="favourite_title">Favourite</string>
    <string name="search_my_favourites">search_mode_favourites</string>
    <string name="search_my_favourites_title">PopMovies - My Favourites</string>
    <string name="movie_favorited_success_message">Movie added to favourites</string>
    <!-- Preferences -->
    <!-- number of poster columns to show in the MainActivity -->
    <string name="pref_num_columns">Number of columns</string>
    <string name="pref_num_columns_1" translatable="false">1</string>
    <string name="pref_num_columns_2" translatable="false">2</string>
    <string name="pref_num_columns_3" translatable="false">3</string>
    <string name="pref_num_columns_4" translatable="false">4</string>
    <string name="pref_num_columns_key" translatable="false">pref_num_columns</string>
    <!-- shall we raise and embed the movie title in action bar -->
    <string name="pref_title_in_bar_title">Save screen space</string>
    <string name="pref_title_in_bar_key" translatable="false">title_in_action_bar</string>
    <string name="pref_title_in_bar_summary_off">Detail title shown in application area, as specified</string>
    <string name="pref_title_in_bar_summary_on">Detail title in Action Bar</string>
    <string name="pref_title_in_bar_default">false</string>
    <!-- The Movie DB API KEY input prefrence -->
    <string name="pref_api_key_title">API key</string>
    <string name="pref_api_key_key" translatable="false">pref_api_key_key</string>
    <string name="pref_api_key_summary">Your personal TMDB API Key is stored here</string>
    <!-- shall we show a number overlay on each poster -->
    <string name="pref_poster_overlay_title">Movie info overlay</string>
    <string name="pref_poster_overlay_key" translatable="false">pref_poster_overlay_key</string>
    <string name="pref_poster_overlay_summary_off">Not shown</string>
    <string name="pref_poster_overlay_summary_on">Shown</string>
    <string name="share_title">Share</string>
    <string name="sharing_message">Sharing you a video</string>
    <string name="movie_title">MOVIE TITLE</string>
    <string name="poster">Poster</string>
    <string name="video_click_button">This is a video, click button.</string>
    <string name="image_attribution_to_tmdb">Images and all movie data supplied by The Movie Database</string>
    <string name="tmdb_url_text_and_abbrev">https://themoviedatabase.org (TMDB)</string>
</resources>
