<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="30dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_title"
            app:layout_constraintLeft_toLeftOf="@+id/tv_movie_title" />


            <TextView
                android:id="@+id/ratingTitle"
                android:layout_width="133dp"
                android:layout_height="37dp"
                android:gravity="start"
                android:text="@string/rating_title_default"
                android:textAlignment="gravity"
                android:textSize="@dimen/detail_h2_size"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_title"
                app:layout_constraintLeft_toLeftOf="@+id/tv_date_title"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintRight_toRightOf="@+id/tv_date_title" />

        <TextView
                android:id="@+id/tv_ratingDecimalNumber"
                android:layout_width="96dp"
                android:layout_height="33dp"
                android:gravity="start"
                android:text="@string/not_available"
                android:textAlignment="gravity"
                android:textSize="@dimen/detail_h2_size"
                android:textStyle="normal"
            app:layout_constraintRight_toRightOf="@+id/tv_movie_title"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_date_title" />
        <TextView
            android:id="@+id/tv_date_title"
            android:layout_width="133dp"
            android:layout_height="33dp"
            android:gravity="start"
            android:text="@string/release_date_title"
            android:textAlignment="gravity"
            android:textSize="@dimen/detail_h2_size"
            android:textStyle="bold"
            app:layout_constraintRight_toLeftOf="@+id/tv_ratingDecimalNumber"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ratingTitle"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toRightOf="@+id/synopsisTitle"
            android:layout_marginLeft="8dp" />
        <TextView
            android:id="@+id/tv_date"
            android:layout_width="96dp"
            android:layout_height="37dp"
            android:gravity="start"
            android:text="@string/not_available"
            android:textAlignment="gravity"
            android:textSize="@dimen/detail_h2_size"
            android:textStyle="normal"
            app:layout_constraintRight_toRightOf="@+id/tv_movie_title"
            app:layout_constraintBaseline_toBaselineOf="@+id/ratingTitle"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" />

        <TextView
            android:id="@+id/synopsisTitle"
            android:layout_width="324dp"
            android:layout_height="31dp"
            android:padding="5dp"
            android:text="@string/synopsis_title_default"
            android:textSize="@dimen/detail_h2_size"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@+id/tv_movie_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_title" />

        <TextView
            android:id="@+id/tv_synopsis"
            android:minWidth="300dp"

            android:layout_width="560dp"
            android:layout_height="41dp"
            android:layout_margin="32dp"
            android:text="@string/overview_text_default"
            android:textSize="@dimen/detail_overview_text_size"
            android:paddingRight="32dp"
            app:layout_constraintLeft_toLeftOf="@+id/synopsisTitle"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/synopsisTitle" />

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="576dp"
            android:layout_height="43dp"
            android:padding="10sp"
            android:text="MOVIE TITLE"
            android:textAlignment="center"
            android:textSize="@dimen/main_h1_size"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>
